[HAR-8381]: Jira integration test (#5391)
* adding Jira in SettingsGenerator

* adding JiraFunctionalTest

* Adding jiraCrud test

* moving logic to  start manager to new class

* adding ignore for ArtifactStreamFunctionalTest.java

* adding logging for lock debugging

* adding more logging for debugging

* fixing tests failure due to synchronization

* fixing checkstyle

* removing logs added for debugging

* adding a TODO

* encrypting the jira secret

* reordering in secrets.properties

* adding HTTPWorkflowFunctionalTest

* adding HTTPWorkflowFunctionalTest

* adding ignore for workflow testa s it requires delegate

* adding ignore for jira test as it requires delegate